    instead of letting perl die. Closes: #849944
  * Declare .buildinfo format as stable with version 1.0.
  * Do not depend on cxxabi.h to have declared __cxa_pure_virtual, use
    the same “__cxxabiv1” namespace as specified in the C++ ABI, instead
    of using the “abi” alias intended for use by userland.
    Thanks to Jörg Sonnenberger <joerg@netbsd.org>.
  * Portability:
    - Do not redeclare sys_siglist in libcompat when the system does so.
      Thanks to Thomas Klausner <wiz@NetBSD.org>.
    - Rename err variable to ret in start-stop-daemon as the former is a
      function on BSDs.
    - Use 5-argument kvm_getprocs() call form on OpenBSD in start-stop-daemon.
    - Use correct struct kinfo_proc ruid submember name on NetBSD in
      start-stop-daemon.
    - Define _KMEMUSER for NetBSD to get declarations for various
      struct kinfo_proc members in start-stop-daemon.
  * Perl modules:
    - Do not special case EM_SPARC32PLUS for NetBSD in Dpkg::Shlibs::Objdump,
      the code has been fixed in NetBSD as that situation could not happen.
    - Fix read() error handling in Dpkg::Shlibs::Objdump::get_format() to
      gracefully ignore non-ELF files again. Closes: #854536
    - Emit an explicit warning from Dpkg::Shlibs::Objdump::Object::analyze()
      for unknown executable formats instead of relying on objdump doing so.
    - Do not parse bogus ELF binaries in Dpkg::Shlibs::Objdump::get_format().
      Reported by Niels Thykier <niels@thykier.net>.
    - Add ‘.mnt-ignore’ to the default ignore lists in Dpkg::Source::Package,
      as we were already ignoring the ‘_MTN’ pathnames. Closes: #855450
      Thanks to Nicolas Boulenguez <nicolas@debian.org>.
    - Mark kfreebsd-amd64, kfreebsd-i386, sparc and sparc64 architectures as
      having gcc builtin PIE in Dpkg::Vendor::Debian.
    - Switch PIE handling in Dpkg::Vendor::Debian to have no default (!) and
      delegate the setting to gcc or an explicit request by a user. This is