@@ -7,6 +7,8 @@ dpkg (1.18.23) UNRELEASED; urgency=medium
     the same “__cxxabiv1” namespace as specified in the C++ ABI, instead
     of using the “abi” alias intended for use by userland.
     Thanks to Jörg Sonnenberger <joerg@netbsd.org>.
+  * Add a comment on any C code switch case that falls through. Fixes new
+    gcc-7 warnings.
   * Portability:
     - Do not redeclare sys_siglist in libcompat when the system does so.
       Thanks to Thomas Klausner <wiz@NetBSD.org>.
